<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="diabai.uw.tacoma.edu.hobbyfinder.EditProfileActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        style="@style/TextColor"
        android:id="@+id/edit_user_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:id="@+id/edit_email"
        style="@style/TextColor"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hometown_hint"
        style="@style/TextColor"
        android:id="@+id/edit_hometown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hobbies_hint"
        style="@style/TextColor"
        android:id="@+id/edit_hobbies" />

    <Button
        android:id="@+id/add_hobbies_frag_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/edit_hobbies" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/edit_course_frag_button_submit"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="editUser"
        android:text="@string/submit_edit" />

</LinearLayout>
