<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="diabai.uw.tacoma.edu.hobbyfinder.Dashboard">

    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scrollbarSize="@dimen/com_facebook_profilepictureview_preset_size_large"
        android:layout_gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_profile"
        android:id="@+id/btn_homepage"
        android:layout_marginBottom="14dp"
        android:onClick="editUserProfile"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_by_hobby"
        android:id="@+id/btn_search"
        android:layout_marginBottom="14dp"
        android:onClick="launch"/>
</LinearLayout>
