<resources>
    <string name="app_name">Hobby Finder</string>
    <string name="facebook_app_id">398638680487068</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="user_name_hint">User name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_retype_hint">Retype password</string>
    <string name="gender_hint">Gender</string>
    <string name="hometown_hint">Home town</string>
    <string name="zipcode_hint">Zip code</string>
    <string name="hobbies_hint">Hobbies</string>

    <string name="add_account_text">Add Account</string>
    <string name="add_hobbies">Add hobbies</string>
    <string name="submit_edit">Submit edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_hobbies">Edit Hobbies</string>
    <string name="search_by_hobby">Search users by hobby</string>
    <string name="action_logout">Logout</string>
    <string name="message">Message:</string>
    <string name="email_user">Send a message!</string>
    <string name="share">Share</string>

    <!--Used for shared prefs-->
    <string name="LOGIN_PREFS">diabai.uw.tacoma.edu.hobbyfinder.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="EMAIL">email</string>
    <string name="GENDER">gender</string>

    <!--  ************************************************* -->
    <!-- For 3rd fragment MultiListDialog -->
    <string name="pick_hobbies">Pick Hobbies</string>
    <array name="hobbies_array">
        <item name="running">Running</item>
        <item name="video_games">Video games</item>
        <item name="laughing">Laughing</item>
    </array>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
